--- a/football_tournament/tournament/static/styles/create_or_update_team.css
+++ b/football_tournament/tournament/static/styles/create_or_update_team.css
@@ -1,6 +1,10 @@
 .player {
     display: flex;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 .player-field {
     margin-right: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
