--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -36,7 +36,7 @@
         <div class="sponsor">
             GLI AMICI DELLA COPAMUNDIAL
             <a href="https://www.instagram.com/selos_design/" target="_blank"><img src="{% static 'images/selos.png' %}" alt="Logo"></a>
-            <!-- <a href="https://arredamentifumagalli1957.it/" target="_blank"><img src="{% static 'images/fumagalli.png' %}" alt="Logo"></a> -->
+            <a href="https://www.instagram.com/dementosofficial/" target="_blank"><img src="{% static 'images/dementos.png' %}" alt="Logo"></a>
         </div>
     </div>
 
