--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -30,7 +30,7 @@
     </li>
     <li class="text" style="margin-bottom: 20px;">
         Serata di apertura il 4 Giugno con Concerto Live dei <a
-            href="https://www.instagram.com/dementosofficial/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo
+            href="https://www.instagram.com/p/C6jYZCNNuO6/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo
     </li>
     <li class="text" style="margin-bottom: 20px;">
         Serata di chiusura il 5 Luglio con le Finalissime 1° - 2° posto e 3° - 4° posto, premiazioni, paninaro, dj set con
