--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="title">Benvenuti nel sito della CopaMundial 2024</div>
+<div class="title">Benvenuti alla CopaMundial 2024</div>
 <div class="text">Qui potete rimanere aggiornati sulle prossime sfide, risultati e marcatori.</div>
 <div class="text"><b>Quando</b>: Dal 4 Giugno al 5 Luglio </div>
 <div class="text"><b>Dove</b>:
