--- a/football_tournament/templates/tournament/match_detail.html
+++ b/football_tournament/templates/tournament/match_detail.html
@@ -13,9 +13,11 @@
         {{ match.home_team.name }}
         <div class="goal-scorer-home">
             {% for scorer in home_goals %}
+            {% if scorer.total_goals > 0 %}
             <div class="goal-scorer">
-                {{ scorer.player.surname }} {{1 | make_balls}} ({{scorer.total_goals}})
+                {{ scorer.player.surname }} {{scorer.player.surname | make_balls}} ({{scorer.total_goals}})
             </div>
+            {% endif %}
             {% endfor %}
             {% if mvp.team.name == match.home_team.name %}
             <div class="goal-scorer">
@@ -32,12 +34,12 @@
         <div class="goal-scorer-away">
             {% for scorer in away_goals %}
             <div class="goal-scorer">
-                {{ scorer.player.surname }} {{1 | make_balls}}({{scorer.total_goals}})
+                {{ scorer.player.surname }} {{scorer.player.surname | make_balls}}({{scorer.total_goals}})
             </div>
             {% endfor %}
             {% if mvp.team.name == match.away_team.name %}
             <div class="goal-scorer">
-                {{ mvp.surname }} {{1 | make_cup}}
+                {{ mvp.surname }} {{ 1 | make_cup}}
             </div>
             {% endif %}
 
