--- a/football_tournament/tournament/static/styles/group_draw.css
+++ b/football_tournament/tournament/static/styles/group_draw.css
@@ -6,9 +6,20 @@
 .column {
     display: flex;
     flex-direction: column;
-    font-size: 26px;
+    font-size: 28px;
 }
 .team, .group {
     margin: 5px 0;
-    font-size: 20px;
+    font-size: 28px;
+    margin-top: 10px;
+    font-weight: bold;
+}
+
+.team highlight {
+    font-weight: bold;
+}
+
+.grid-container .column .group.highlight {
+    font-weight: bold;
+    color: white;
 }
