--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -35,8 +35,9 @@
         </div>
         <div class="sponsor">
             GLI AMICI DELLA COPAMUNDIAL
-            <a href="https://www.instagram.com/selos_design/" target="_blank"><img src="{% static 'images/selos.png' %}" alt="Logo"></a>
-            <a href="https://www.instagram.com/dementosofficial/" target="_blank"><img src="{% static 'images/dementos.png' %}" alt="Logo"></a>
+            <a href="https://www.instagram.com/selos_design/" target="_blank"><img src="{% static 'images/selos.png' %}" alt="Selos"></a>
+            <img src="{% static 'images/il_legno_per_voi.png' %}" alt="LegnoPerVoi"></a>
+            <a href="https://www.instagram.com/dementosofficial/" target="_blank"><img src="{% static 'images/dementos.png' %}" alt="Dementos"></a>
         </div>
     </div>
 
