--- a/football_tournament/templates/tournament/group_draw.html
+++ b/football_tournament/templates/tournament/group_draw.html
@@ -9,9 +9,18 @@
 <form method="post" style="margin-bottom: 20px;">
     {% csrf_token %}
     {% if user.is_authenticated %}
-    <button type="submit" name="draw">Sorteggia una squadra</button>
-    <button type="submit" name="reset">Reset</button>
-    <button type="submit" name="start_tournament">Inizia Torneo</button>
+    <button type="submit" name="draw" class="submit">
+        <img src="{% static 'images/draw_team_icon.png' %}" alt="Draw Team">
+        <p>Sorteggia una squadra</p>
+    </button>
+    <button type="submit" name="reset" class="submit">
+        <img src="{% static 'images/reset.png' %}" alt="Reset">
+        <p>Reset</p>
+    </button>
+    <button type="submit" name="start_tournament" class="submit">
+        <img src="{% static 'images/kick-off.png' %}" alt="Inizia Torneo">
+        <p>Inizia Torneo</p>
+    </button>
     {% endif %}
 </form>
 
@@ -19,14 +28,14 @@
     <div class="column">
         <h3>Squadre</h3>
         {% for team in unassigned_teams %}
-            <div class="team">{{ team.name }}</div>
+        <div class="team">{{ team.name }}</div>
         {% endfor %}
     </div>
     {% for group in groups %}
     <div class="column">
         <h3>{{ group.name }}</h3>
         {% for team in group.teams.all %}
-            <div class="group {% if team.id == last_picked_team_id %}highlight{% endif %}">{{ team.name }}</div>
+        <div class="group {% if team.id == last_picked_team_id %}highlight{% endif %}">{{ team.name }}</div>
         {% endfor %}
     </div>
     {% endfor %}
