--- a/football_tournament/templates/tournament/match_detail.html
+++ b/football_tournament/templates/tournament/match_detail.html
@@ -28,13 +28,19 @@
     </div>
 
     <div class="score">{{ match.score_home_team }} - {{ match.score_away_team }}</div>
+    {% if match.dts %}
+    <p class="score">(dts)</p>
+    {% endif %}
+    {% if match.dcr %}
+    <p class="score">(dcr)</p>
+    {% endif %}
 
     <div class="team-name-away">
         {{ match.away_team.name }}
         <div class="goal-scorer-away">
             {% for scorer in away_goals %}
             <div class="goal-scorer">
-                {{ scorer.player.surname }} {{scorer.player.surname | make_balls}}({{scorer.total_goals}})
+                {{ scorer.player.surname }} {{scorer.player.surname | make_balls}} ({{scorer.total_goals}})
             </div>
             {% endfor %}
             {% if mvp.team.name == match.away_team.name %}
@@ -42,7 +48,6 @@
                 {{ mvp.surname }} {{ 1 | make_cup}}
             </div>
             {% endif %}
-
         </div>
     </div>
 </div>
