--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -26,7 +26,7 @@
         26 partite
     </li>
     <li class="text" style="margin-bottom: 20px;">
-        Sorteggio Live giovedì 16 maggio
+        Sorteggio Live Lunedì 20 Maggio con diretta Instagram dalle ore 21:00
     </li>
     <li class="text" style="margin-bottom: 20px;">
         Serata di apertura il 4 Giugno con Concerto Live dei <a
